--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,19 @@
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "tab"
+skip-magic-trailing-comma = false
+line-ending = "lf"
+docstring-code-format = false
+exclude = []
+
 [tool.ruff]
 line-length = 88
 target-version = "py310"
 
+# Exclude a variety of commonly ignored directories.
+exclude = []
+
+[tool.ruff.lint]
 select = [
     "B",   # flake8-bugbear
     "C4",  # flake8-comprehensions
@@ -61,7 +73,7 @@ ignore = [
     "SIM115", # Use context handler for opening files
     # "SIM111", # Use all(...): warning: `SIM111` has been remapped to `SIM110`.
     # ERA, PD,
-    "TCH003", # Move standard library import `...` into a type-checking block
+    "TC003", # Move standard library import `...` into a type-checking block
 ]
 
 # UP033: (Since Python 3.9) Use `@functools.cache`
@@ -125,15 +137,7 @@ per-file-ignores = {}
 dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 
 
-[tool.ruff.format]
-quote-style = "double"
-indent-style = "tab"
-# Like Black, respect magic trailing commas.
-skip-magic-trailing-comma = false
-# Like Black, automatically detect the appropriate line ending.
-line-ending = "auto"
-
-[tool.ruff.mccabe]
+[tool.ruff.lint.mccabe]
 # Unlike Flake8, default to a complexity level of 10.
 max-complexity = 10
 
